# obs-linkr

./: CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
cmake/: embedded-assets.generated.hpp.in
data/locale/: en-US.ini  zh-CN.ini
src/: config-store.cpp  config-store.hpp  constants.hpp  http-server-internal.hpp  http-server-unix.cpp  http-server-windows.cpp  http-server.cpp  http-server.hpp  linkr-source.cpp  linkr-source.hpp  plugin-main.cpp  utils.cpp  utils.hpp
src/web/: app.js  index.html  styles.css
